--- a/all_recipe/templates/all_recipe/indian/punjabi.html
+++ b/all_recipe/templates/all_recipe/indian/punjabi.html
@@ -21,7 +21,7 @@
             </div>
             <div class="column">
                 <button onclick="window.location='{% url 'amritsariFish' %}';">
-                <img src="{% static 'all_recipe/images/punjabi/Amritsari FIsh .png' %}" alt="Amritsari Fish" style="width:100%">
+                <img src="{% static 'all_recipe/images/punjabi/Amritsari Fish.png' %}" alt="Amritsari Fish" style="width:100%">
                 <h3> Amritsari Fish </h3>
                 </button>
             </div>
