--- a/all_recipe/templates/all_recipe/recipes/maharashtrian/pavBhaji.html
+++ b/all_recipe/templates/all_recipe/recipes/maharashtrian/pavBhaji.html
@@ -73,5 +73,5 @@ How do you get the perfect crackling mutton ribs? Cook them in milk and spices, 
 {% endblock %}
 
 {% block nutrition %}
-Carbs: 43g, Fats:7.8g, Protien:6.6g
+Carbs: 43g, Fats: 7.8g, Protein: 6.6g
 {% endblock %}
