--- a/all_recipe/templates/all_recipe/register.html
+++ b/all_recipe/templates/all_recipe/register.html
@@ -34,6 +34,6 @@
 
     <span style="padding: 15px;;"> Already have an account? <a href="{% url 'login' %}">Log In here.</a> </span>
 
-    <img src = "{% static 'all_recipe/images/initial_quote.jpg' %}" width="25%" style="position: relative; left: 0; float: right;">   
+    <img src = "{% static 'all_recipe/images/initial_quote.jpg' %}" width="25%" style="position: absolute; right: 0px; bottom: 0px; float: right;">   
 
 {% endblock %}
