--- a/all_recipe/templates/all_recipe/recipes/maharashtrian/pavBhaji.html
+++ b/all_recipe/templates/all_recipe/recipes/maharashtrian/pavBhaji.html
@@ -15,7 +15,8 @@ Pav Bhaji
 {% endblock %}
 
 {% block description %}
-How do you get the perfect crackling mutton ribs? Cook them in milk and spices, wrap them up in gram flour batter and fry them till they turn golden.{% endblock %}
+Pav Bhaji consists of a thick vegetable curry served with a soft bread roll. Vegetables in the curry may include potatoes, onions, carrots, chillies, peas, bell peppers, and tomatoes. Its origins are in the state of Maharashtra.
+{% endblock %}
 
 {% block prepTime %} 10 Min {%endblock%}
 {% block cookTime %} 60 Min {%endblock%} 
