--- a/all_recipe/templates/all_recipe/indian/maharashtrian.html
+++ b/all_recipe/templates/all_recipe/indian/maharashtrian.html
@@ -4,49 +4,74 @@
     Maharashtrian Dishes
 {% endblock %}
 
+{% block css %}
+    <style>
+        body {
+            background-image: linear-gradient(#feada6, #f5efef);
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+            background-position: center center;
+        }
+
+        .flex-container {
+            display: flex;
+            flex-wrap: wrap;
+        }
+
+        .flex-container > div {
+            width: 400px;
+            padding: 20px;
+            margin: 0 auto;
+            margin-top: 12px;
+            text-align: center;
+            font-size: 30px;
+        }
+
+        img {
+            height: 200px;
+        }
+    </style>
+{% endblock %}
+
 {% block body %}
 
     <a href="{% url 'index' %}"> <i class="fa fa-home" style="float: left; font-size: 35px; padding: 10px; margin-left: 10px;"></i> </a>
 
     <h1 style="text-align:center; font-style: italic;"> Maharashtrian Recipes </h1>
 
-    <div style="padding: 30px;">
-
-        <div class="row">
-            <div class="column">
+    <div class="flex-container">
+        <div>
             <button onclick="window.location='{% url 'aamti' %}';">
                 <img src="{% static 'all_recipe/images/maharashtrian/Aamti.png' %}" alt="Aamti" style="width:100%">
                 <h3> Aamti </h3>
                 </button>
             </div>
-            <div class="column">
+            <div>
                 <button onclick="window.location='{% url 'pavBhaji' %}';">
                 <img src="{% static 'all_recipe/images/maharashtrian/Pav Bhaji.png' %}" alt="Pav Bhaji" style="width:100%">
                 <h3> Pav Bhaji </h3>
                 </button>
             </div>
-            <div class="column">
+            <div>
                 <button onclick="window.location='{% url 'pudachiWadi' %}';">
                 <img src="{% static 'all_recipe/images/maharashtrian/Pudachi Wadi.png' %}" alt="Pudachi Wadi" style="width:100%">
                 <h3> Pudachi Wadi </h3>
                 </button>
             </div>
-        </div>
-
-        <div class="row">
-            <div class="column">
+            <div>
                 <button onclick="window.location='{% url 'batataVada' %}';">
                 <img src="{% static 'all_recipe/images/maharashtrian/Batata Vada.png' %}" alt="Batata Vada" style="width:100%">
                 <h3> Batata Vada </h3>
                 </button>
             </div>
-            <div class="column">
+            <div>
                 <button onclick="window.location='{% url 'puranPoli' %}';">
                 <img src="{% static 'all_recipe/images/maharashtrian/Puran Poli.png' %}" alt="Puran Poli" style="width:100%">
                 <h3> Puran Poli </h3>
                 </button>
             </div>
-            <div class="column">
+            <div>
                 <button onclick="window.location='{% url 'misalPav' %}';">
                     <img src="{% static 'all_recipe/images/maharashtrian/Misal Pav.png' %}" alt="Misal Pav" style="width:100%">
                     <h3> Misal Pav </h3>
