--- a/all_recipe/static/all_recipe/template.css
+++ b/all_recipe/static/all_recipe/template.css
@@ -1,7 +1,7 @@
 body {
   background-color: violet;
   font-family: 'Times New Roman', Times, serif;
-  background-image: url("images/food_background.jpg");
+  background-image: url("images/about_us_background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
