--- a/all_recipe/templates/all_recipe/feedback.html
+++ b/all_recipe/templates/all_recipe/feedback.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-<a href="{% url 'index' %}"> <i class="fa fa-home" style="float: right; font-size: 35px;  margin-right: 5px; "></i> </a>
+<a href="{% url 'index' %}"> <i class="fa fa-home" style="float: right; font-size: 35px;  margin-right: 5px;" title="Home Page"></i> </a>
 
 
 <h2>Liked/Disliked something? Let us know here! </h2>    
