--- a/all_recipe/templates/all_recipe/about.html
+++ b/all_recipe/templates/all_recipe/about.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 
-<a href="{% url 'index' %}"> <i class="fa fa-home" style="float: left; font-size: 35px; padding: 10px;"></i> </a>
+<a href="{% url 'index' %}"> <i class="fa fa-home" style="float: left; font-size: 35px; padding: 10px;" title="Home Page"></i> </a>
 
 <h2 style="font-family:Cambria; font-size: 40px; text-align: center; font-style: italic; margin-right: 40px;"> Meet our team </h2>
 
