--- a/all_recipe/templates/all_recipe/feedback.html
+++ b/all_recipe/templates/all_recipe/feedback.html
@@ -17,7 +17,7 @@
 <body>
 
 <a href="{% url 'index' %}"> <i class="fa fa-home" style="float: right; font-size: 35px;  margin-right: 5px;" title="Home Page"></i> </a>
-
+<i class="fa fa-question-circle" style="float: right; font-size: 35px; margin-right: 15px; " title="For futher assistance or feednack, feel free to get in touch with us by vistiing the About Us page."></i> 
 
 <h2>Liked/Disliked something? Let us know here! </h2>    
 <div class="container">    
